--- a/tutorkit/homepage/index.html
+++ b/tutorkit/homepage/index.html
@@ -1,4 +1,5 @@
-<h1 style="text-align: center;">Tutorkit - Tutor organizer</h1> 
+<h1 style="text-align: center;">Tutorkit - Tutor organizer</h1>
+![Book logo](/least-github-pages/assets/logo.png)
 <p></p> 
 <p>Welcome to the Tutorkit homepage</p> 
 <p>Useful links:</p> 
