--- a/tutorkit/homepage/index.html
+++ b/tutorkit/homepage/index.html
@@ -1,5 +1,5 @@
 <h1 style="text-align: center;">Tutorkit - Tutor organizer</h1>
-![Book logo](/least-github-pages/assets/logo.png)
+![Tutorkit Logo](/app_docs/assets/tutorkit-icon.png)
 <p></p> 
 <p>Welcome to the Tutorkit homepage</p> 
 <p>Useful links:</p> 
