--- a/tutorkit/homepage/index.html
+++ b/tutorkit/homepage/index.html
@@ -1,5 +1,7 @@
 <h1 style="text-align: center;">Tutorkit - Tutor organizer</h1>
-<img src="/app_docs/docs/assets/tutorkit-icon.png" alt="Tutorkit Logo" class="center" width="5%">
+<p class="aligncenter">
+  <img src="/app_docs/docs/assets/tutorkit-icon.png" alt="Tutorkit Logo" width="7%">
+</p>
 <p></p> 
 <p>Welcome to the Tutorkit homepage</p> 
 <p>Useful links:</p> 
