--- a/tutorkit/homepage/index.html
+++ b/tutorkit/homepage/index.html
@@ -1,7 +1,7 @@
 <h1 style="text-align: center;">Tutorkit - Tutor organizer</h1>
-<p class="aligncenter">
+<center>
   <img src="/app_docs/docs/assets/tutorkit-icon.png" alt="Tutorkit Logo" width="7%">
-</p>
+</center>
 <p></p> 
 <p>Welcome to the Tutorkit homepage</p> 
 <p>Useful links:</p> 
